--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "3-a-side",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "A football quiz",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Sonny Booth <sonnyboothwebdesign@gmail.com>",
   "dependencies": {
     "gatsby": "^4.9.0",
     "gatsby-plugin-gatsby-cloud": "^4.9.0",
@@ -20,7 +20,11 @@
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
-    "prettier": "^2.5.1"
+    "autoprefixer": "^10.4.2",
+    "gatsby-plugin-postcss": "^5.9.0",
+    "postcss": "^8.4.7",
+    "prettier": "^2.5.1",
+    "tailwindcss": "^3.0.23"
   },
   "keywords": [
     "gatsby"
@@ -37,9 +41,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+    "url": "https://github.com/sonnybooth-hexsu/3-a-side"
   },
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/sonnybooth-hexsu/3-a-side/issues"
   }
 }
